libvlc_media_get_thumbnail() does not exist
While using libvlc to build a video player with Python, I found the dev builds had support for generating thumbnail requests with libvlc_media_thumbnail_request_by_pos
, which triggers the libvlc_MediaThumbnailGenerated
event.
The documentation for this event says to "see libvlc_media_get_thumbnail()
, but as far as I can tell no such method exists. This event + documentation was added 2.5 years ago and seemed to be listed as a complete feature when it was merged so this seems like an oversight.
As an aside I can't seem to figure out how to retrieve a thumbnail at all from the request or event, though that might be an omission from python-vlc rather than vlc itself.