libvlc_events: Fix reference to thumbnail generation functions

Fix #25810